<resources>
    <string name="app_name">Envelhecimento Saudavel FSJ</string>

    <!--Strings da tela de cadastro dos pacientes-->
    <string name="uf">Estado</string>
    <string name="logradouro">Rua</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cep">Cep</string>
    <string name="numero">Número</string>
    <string name="localidade">Cidade</string>
    <string name="ok">OK</string>
    <string name="dados_do_paciente">Dados do Paciente</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="endereco">Endereco</string>
    <string name="sexo">Sexo</string>
    <string name="proximo">Próximo</string>

    <!--Strings da tela inicial-->
    <string name="novo_paciente">Novo\nPaciente</string>
    <string name="relatório">Relatório</string>

    <!--Strings da tela Oximetria/Antropometria-->
    <string name="oximetria">Oximetria</string>
    <string name="v_pre_teste">Valor Pré-Teste</string>
    <string name="v_pos_teste">Valor Pós Teste</string>
    <string name="antropometria">Antropometria</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="pressaosistolica">P.Sistólica</string>
    <string name="pressaodiastolica">P.Diastólica</string>
    <string name="fc">Frequência Cardíaca</string>
    <string name="IMCresult">0.00</string>
    <string name="RCQ">RCQ =</string>
    <string name="RCQresult">0.00</string>

    <!--Strings de Teste Caminhada-->
    <string name="testecaminhada">Teste de Caminhada</string>
    <string name="distancia">Distância(km)</string>
    <string name="vo2max">VO² Máximo</string>
    <string name="padiastolicapreteste">P.A.Diastólica</string>
    <string name="pasistolicapreteste">P.A.Sistólica </string>
    <string name="padiastolicaposteste">P.A.Diastólica</string>
    <string name="pasistolicaposteste">P.A.Sistólica</string>

    <!--Dobras Cutâneas-->
    <string name="dobrascutaneas">Dobras Cutâneas</string>
    <string name="dobrasresult">Resultado (%)</string>

    <!--Strings Resultados-->
    <string name="resultado">Resultado:</string>
    <string name="nomepessoa">nomepessoa</string>
    <string name="idade">12</string>
    <string name="fcResultLaudo">0.00</string>
    <string name="PAResultado">130X90</string>
    <string name="pressao_pre">Pressão Pré-Teste:</string>
    <string name="pressao_pos">Pressão Pós-Teste</string>
    <string name="laudo_exibe_valorpreoximetria">0.00</string>
    <string name="laudo_oximetria_valorposteste">0.00</string>
    <string name="pressaoPreTesteCaminhada_laudo">0.0</string>
    <string name="pressaoPosTesteCaminhada_laudo">0.00</string>
    <string name="vo2maxLaudoExibe">0.0</string>
    <string name="salvar">Salvar</string>
    <string name="rcq">RCQ</string>
    <string name="imc">IMC</string>
    <string name="telefone">Telefone</string>
    <string name="peso_kg">Peso (Kg)</string>
    <string name="altura_m">Altura (m)</string>
    <!--Array de estados-->
    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>