<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dados_do_paciente"
            android:textColor="#99000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastro_nomePaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastro_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/cadastro_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cadastro_sexoFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminino" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/masculino" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/cadastro_dataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/data_nascimento"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textColor="#99000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/endereco_edtRuaId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logradouro"
                android:inputType="textCapSentences|textMultiLine|textAutoCorrect" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/complementoIdLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/endereco_edtComplementoId"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/complemento"
                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/endereco_edtBairroId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/complementoIdLayout"
                android:layout_toRightOf="@id/complementoIdLayout"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro"
                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/endereco_edtCepId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:inputType="number"
                    android:maxLength="9" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/endereco_edtNumeroId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/endereco_edtCepId"
                android:layout_toRightOf="@id/endereco_edtCepId"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/endereco_edtCidadeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/endereco_edtCidadeId"
                    android:layout_alignStart="@+id/endereco_edtCidadeId"
                    android:layout_alignLeft="@+id/endereco_edtCidadeId"
                    android:hint="@string/localidade"
                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/endereco_edtCidadeId"
                android:layout_toRightOf="@id/endereco_edtCidadeId"
                android:text="@string/uf" />

            <Spinner
                android:id="@+id/endereco_spinnerEstados"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/endereco_edtCidadeId"
                android:layout_toRightOf="@id/endereco_edtCidadeId"
                android:entries="@array/estados" />
        </RelativeLayout>

        <Button
            android:id="@+id/cadastro_btnProximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proximo"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
