<?xml version="1.0" encoding="utf-8"?><!--Tela por Livia Dantas-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oximetria"
            android:textColor="@color/cinza40"
            android:textSize="26sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/oximetria_valor_pre_teste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/v_pre_teste"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/oximetria_valor_pos_teste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/v_pos_teste"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antropometria"
            android:textColor="@color/cinza40"
            android:textSize="26sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/antropometria_peso"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/antropometria_altura"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:hint="@string/altura"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/antropometria_pressaosistolica"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:hint="@string/pressaosistolica"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/antropometria_pressaodiastolica"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:hint="@string/pressaodiastolica"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
            </TableRow>
        </TableLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/antropometria_fc"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:hint="@string/fc"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!--Layout do IMC/RCQ-->
        <include layout="@layout/imc_rcq" />

        <Button
            android:id="@+id/oximetria_btnProximo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/proximo"
            android:textColor="@color/pink" />
    </LinearLayout>
</ScrollView>