<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testecaminhada"
                android:textColor="@color/cinza40"
                android:textSize="26sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/teste_caminhada_distancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/distancia"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/teste_caminhada_vo2max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vo2max"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pressao_pre"
                android:textColor="@color/cinza40"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/teste_caminhada_pa_sistolica_pre"
                        android:layout_width="181dp"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pasistolicapreteste"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/teste_caminhada_pa_diastolica_pre"
                        android:layout_width="181dp"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/padiastolicapreteste"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pressao_pos"
                    android:textColor="@color/cinza40"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TableRow>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teste_caminhada_pa_sistolica_pos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pasistolicaposteste"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/teste_caminhada_pa_diastolica_pos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/padiastolicaposteste"
                            android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/teste_caminhada_btnProximo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/proximo"
        android:textColor="@color/pink" />
</RelativeLayout>