<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dobras_cutaneas_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dobrascutaneas"
        android:textColor="@color/cinza40"
        android:textSize="26sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dobras_cutaneas_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dobras_cutaneas_tv"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dobrasresult"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/dobras_cutaneas_btnProximo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/proximo"
        android:textColor="@color/pink" />

</RelativeLayout>