<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <TextView
                android:id="@+id/imc_rcqIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IMC"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/imc_rcqIMCresultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IMCresult"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/imc_rcqRCQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RCQ"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/imc_rcqRCQresultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RCQresult"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:textStyle="normal" />
        </TableRow>

    </TableLayout>

</LinearLayout>